.metadata/.plugins/org.eclipse.cdt.ui/Code.build.log
23:26:06 **** Incremental Build of configuration Debug for project Code ****
make all 
Building file: ../Rol.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Rol.d" -MT"Rol.d" -o "Rol.o" "../Rol.cpp"
In file included from ../Diagnostico.h:29:0,
                 from ../Consulta.h:49,
                 from ../Rol.h:6,
                 from ../Rol.cpp:1:
../Tratamiento.h:25:3: error: ‘Medico’ does not name a type
   Medico* cirujano;
   ^
../Tratamiento.h:28:27: error: ‘Medico’ has not been declared
   Quirurjico(string,Fecha,Medico*);
                           ^
../Tratamiento.h:30:3: error: ‘Medico’ does not name a type
   Medico* getCirujano();
   ^
make: *** [Rol.o] Error 1

23:26:06 Build Finished (took 363ms)

